crates/hdk_derive/tests/macros/entry_type_registration_bad_opts_types.stderr
error: Unexpected literal type `int` at name
 --> tests/macros/entry_type_registration_bad_opts_types.rs:5:25
  |
5 |     #[entry_type(name = 55)]
  |                         ^^
